Add 'Why Buy SnozCoin' section with pump.fun CTA

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <span></span><span></span><span></span>
       </button>
       <nav class="nav" id="nav">
+        <a href="#why-buy">Why Buy</a>
         <a href="#live-data">Live Data</a>
         <a href="#about">About</a>
         <a href="#transparency">Transparency</a>
@@ -78,6 +79,44 @@
             </picture>
             <div class="coin-shadow"></div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- WHY BUY SNOZCOIN SECTION -->
+    <section class="panel why-buy" id="why-buy">
+      <div class="container">
+        <h2>Why Buy SnozCoin?</h2>
+        <p class="lead">Join a transparent, community-driven cryptocurrency built for long-term growth and real engagement.</p>
+        
+        <div class="why-buy-grid">
+          <div class="why-buy-card">
+            <div class="why-buy-icon">🛡️</div>
+            <h3>100% Transparent</h3>
+            <p>Verifiable on-chain data, open-source code, and honest communication. No hidden agendas or rug pulls.</p>
+          </div>
+
+          <div class="why-buy-card">
+            <div class="why-buy-icon">⚡</div>
+            <h3>Easy to Purchase</h3>
+            <p>Buy directly on pump.fun with just a few clicks. Fast, secure, and beginner-friendly platform.</p>
+          </div>
+
+          <div class="why-buy-card">
+            <div class="why-buy-icon">👥</div>
+            <h3>Active Community</h3>
+            <p>Join a growing community of real holders. Participate in governance, share ideas, and build together.</p>
+          </div>
+        </div>
+
+        <div class="buy-cta-wrapper">
+          <a href="https://pump.fun/coin/CQdiqHthNfY2p1RiBEaRty6k99eJ58DyDAqzNscDpump" target="_blank" rel="noopener" class="btn btn-buy-now">
+            <svg width="20" height="20" fill="currentColor" viewBox="0 0 16 16" style="margin-right: 8px;">
+              <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+            </svg>
+            Buy SnozCoin Now on pump.fun
+          </a>
+          <p class="buy-disclaimer">Not financial advice. Always do your own research before investing.</p>
         </div>
       </div>
     </section>
